--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
 
 
     ---
-    # Conclusion and Limits
+    # Conclusion and limits
     <hr/><br>
 
     ### For `n` species, a network `W`, a set of abiotic variables `E`,
@@ -737,12 +737,12 @@
 
     --
     <br/>
-    ### .right[Cazelles *et al*, 2016, [*Ecography*.](http://doi.org/10.1111/ecog.01714)]
+    ### .right[[Cazelles *et al.*, *Ecography* (2016).](http://doi.org/10.1111/ecog.01714)]
 
 
 
     ---
-    # Conclusion and Limits
+    # Conclusion and limits
     <hr/><br>
 
     ### Community-based biogeography; more than occurrence and co-occurrence
@@ -850,7 +850,7 @@
     <hr/><br/>
 
     .column[
-    ### Observed *vs* Expected
+    ### Observed `vs` Expected
     <br>
     ### `\(P(X_i,X_j) - P(X_i)P(X_j)\)`
     ]
@@ -863,7 +863,7 @@
     <hr/><br/>
 
     .column[
-    ### Observed *vs* Expected
+    ### Observed `vs` Expected
     <br>
     ### `\(P(X_i,X_j) - P(X_i)P(X_j)\)`
     ]
@@ -880,7 +880,7 @@
     <hr/><br/>
 
     .column[
-    ### Observed *vs* Expected
+    ### Observed `vs` Expected
     <br>
     ### `\(P(X_i,X_j) - P(X_i)P(X_j)\)`
     ]
@@ -897,7 +897,7 @@
     <hr/><br/>
 
     .column[
-    ### Observed *vs* Expected
+    ### Observed `vs` Expected
     <br>
     ### `\(P(X_i,X_j) - P(X_i)P(X_j)\)`
     ]
@@ -914,7 +914,7 @@
     <hr/><br/>
 
     .column[
-    ### Observed *vs* Expected
+    ### Observed `vs` Expected
     <br>
     ### `\(P(X_i,X_j) - P(X_i)P(X_j)\)`
     <br/>
@@ -933,7 +933,7 @@
     <hr/><br/>
 
     .column[
-    ### Observed *vs* Expected
+    ### Observed `vs` Expected
     <br>
     ### `\(P(X_i,X_j) - P(X_i)P(X_j)\)`
     <br/>
@@ -1026,7 +1026,7 @@
 
     --
     <br/><br/><br/>
-    ### .right[Cazelles *et al*, 2016, [*Theoretical Ecology*.](http://doi.org/10.1007/s12080-015-0281-9)]
+    ### .right[[Cazelles *et al.*, *Theoretical Ecology* (2016).](http://doi.org/10.1007/s12080-015-0281-9)]
 
 
 
@@ -1046,8 +1046,7 @@
     ---
     # DEALING WITH REAL DATA SETS
     <hr />
-    ### Co-occurrence and empirical networks
-    ### Cazelles *et al*, 2017, *in prep*
+    ### Can we infer interactions from co-occurrence?
 
     ---
     name: style1
@@ -1068,58 +1067,10 @@
 
 
     ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figAUC1.png)]
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figAUC2.png)]
-
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figAUC3.png)]
-
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figAUC4.png)]
-
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figAUC5.png)]
-
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figAUC6.png)]
-
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](./fig/figAUC7.png)]
-
-
-    ---
     # Integrating abiotic variables (G)
     <hr/><br/>
 
-    # `\(P(X_{i,G},X_{j,G})\)` *vs*  `\(P(X_{i,G})P(X_{j,G})\)`
+    # `\(P(X_{i,G},X_{j,G})\)` `vs`  `\(P(X_{i,G})P(X_{j,G})\)`
 
 
     ---
@@ -1139,12 +1090,12 @@
     # What did I do?
     <hr/><br/>
 
-    ### Five data sets
+    ### 4 data sets -- interactions known
     --
 
     <br/>
 
-    ### `\(P(X_{i,G},X_{j,G})\)` *vs*  `\(P(X_{i,G})P(X_{j,G})\)`
+    ### `\(P(X_{i,G},X_{j,G})\)` `vs`  `\(P(X_{i,G})P(X_{j,G})\)`
     --
 
     <br/>
@@ -1159,7 +1110,7 @@
 
 
     ---
-    # Kopelke *et al*, *Ecology* (2017)
+    # Kopelke *et al.*, *Ecology* (2017)
     <hr/>
 
     .column[
@@ -1175,7 +1126,7 @@
 
 
     ---
-    # Kopelke *et al*, *Ecology* (2017)
+    # Kopelke *et al.*, *Ecology* (2017)
     <hr/>
 
     .column[
@@ -1191,7 +1142,7 @@
 
 
     ---
-    # Three levels networks
+    # Three trophic levels networks
     <hr/><br/>
 
     # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
@@ -1207,44 +1158,44 @@
 
 
     ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
+    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler - Shortest path
     <hr/><br/>
 
     ![:scale 100%](./fig/figSG0.png)
 
     ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
+    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler - Shortest path
     <hr/><br/>
 
     ![:scale 100%](./fig/figSG1.png)
 
     ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
+    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler - Shortest path
     <hr/><br/>
 
     ![:scale 100%](./fig/figSG2.png)
 
     ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
+    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler - Shortest path
     <hr/><br/>
 
     ![:scale 100%](./fig/figSG3.png)
 
     ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
+    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler - Shortest path
     <hr/><br/>
 
     ![:scale 100%](./fig/figSG4.png)
 
     ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
+    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler - `\(P(X_{i,G},X_{j,G})\)`
     <hr/><br/>
 
     ![:scale 100%](./fig/figSG5.png)
 
 
     ---
-    # Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
+    # Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids -  `\(P(X_{i,G},X_{j,G})\)`
     <hr/><br/>
     ![:scale 100%](./fig/figGP5.png)
 
@@ -1256,21 +1207,21 @@
     .center[![:scale 100%](./fig/figsht3.png)]
 
     ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler *vs* Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
+    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler `vs` Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
     <hr/>
 
     .center[![:scale 53%](./fig/figSG5.png)]
     .center[![:scale 53%](./fig/figGP5.png)]
 
     ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler *vs* Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
+    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler `vs` Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
     <hr/>
 
     .center[![:scale 53%](./fig/figSG6.png)]
     .center[![:scale 53%](./fig/figGP6.png)]
 
     ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler *vs* Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
+    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler `vs` Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
     <hr/>
 
     .center[![:scale 53%](./fig/figSG7.png)]
@@ -1300,7 +1251,7 @@
 
     --
     <br/><br/><br/><br/><br/>
-    ### .right[Cazelles *et al*, 2018, *in prep*]
+    ### .right[[Cazelles *et al.*, *in prep* (2018).]()]
 
 
 
@@ -1341,7 +1292,10 @@
     ## 1. How to integrate biotic interactions into distribution models?
 
     --
-    ### `\( \Longrightarrow \)` Network distribution models (NDMs)
+    ### `\( \Longrightarrow \)` think at the community-scale
+
+    --
+    ### `\( \Longrightarrow \)` build Network Distribution Models (NDMs)
 
     ---
     # Answers
@@ -1352,6 +1306,10 @@
 
     ### `\( \Longrightarrow \)` shortest path <i class="fa fa-long-arrow-up" aria-hidden="true"></i> &nbsp;&nbsp; `\( \Longrightarrow \)` &nbsp;&nbsp; detection <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
     ### `\( \Longrightarrow \)` degree <i class="fa fa-long-arrow-up" aria-hidden="true"></i> &nbsp;&nbsp; `\( \Longrightarrow \)` &nbsp;&nbsp; detection <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
+
+    --
+
+    ### We may not need to consider the whole network
 
     ---
     # Answers
@@ -1397,7 +1355,7 @@
 
     <br/>
 
-    ## Network `\(W\)`, abiotic variable(s) `\(E\)`
+    ## Network `\(W\)`, abiotic variables `\(E\)`
 
     --
 
@@ -1442,7 +1400,7 @@
 
     # A first step:
 
-    ## **[USING AN ENERGETIC FRAMEWORK](https://kevcaz.github.io/talkBES2017/#1)**
+    ## **[BUILDING AN ENERGETIC FRAMEWORK](https://kevcaz.github.io/talkBES2017/#1)**
 
 
     ---
@@ -1479,18 +1437,17 @@
     # Model principle
     <hr/><br>
 
-    ## What's new?
-    <br>
-
     --
     ## 1- Cost of a community
+
+    <br>
 
     --
     ## 2- Extinctions
 
-      ### Random
+      ### - Random
 
-      ### Energy based
+      ###-  Energy based
 
 
     ---
@@ -1557,7 +1514,7 @@
     # Model
     <hr/><br>
 
-    .center[![:scale 100%](img/figeco9.png)]
+    .center[![:scale 100%](fig/gtib/figGTIB9.png)]
 
 
 
@@ -1628,6 +1585,34 @@
 
     <!-- contrast random and non randon scenarios -->
 
+    ---
+    # An Energetic Theory of Isand Biogeography
+    <hr/><br>
+
+    --
+    ## - TTIB / MTE (or DEB)
+    <br>
+
+    --
+    ## - Better quantification
+    <br>
+
+    --
+    ## - Theoretical fundations of NDMs
+
+
+    ---
+    # New insights
+    <hr/><br>
+
+    .center[![:scale 85%](fig/Hatton.png)]
+
+    ---
+    # New insights
+    <hr/>
+
+    .center[![:scale 95%](fig/figdem7.png)]
+
 
 
 
@@ -1679,6 +1664,54 @@
     >  If current trends continue to 2020
     > vertebrate populations may decline by an
     > average of 67 per cent compared to 1970.
+
+
+    ---
+    # Using species as predictors?
+    <hr/><br/>
+
+    .center[![:scale 100%](./fig/figAUC1.png)]
+
+    ---
+    # Using species as predictors?
+    <hr/><br/>
+
+    .center[![:scale 100%](./fig/figAUC2.png)]
+
+
+    ---
+    # Using species as predictors?
+    <hr/><br/>
+
+    .center[![:scale 100%](./fig/figAUC3.png)]
+
+
+    ---
+    # Using species as predictors?
+    <hr/><br/>
+
+    .center[![:scale 100%](./fig/figAUC4.png)]
+
+
+    ---
+    # Using species as predictors?
+    <hr/><br/>
+
+    .center[![:scale 100%](./fig/figAUC5.png)]
+
+
+    ---
+    # Using species as predictors?
+    <hr/><br/>
+
+    .center[![:scale 100%](./fig/figAUC6.png)]
+
+
+    ---
+    # Using species as predictors?
+    <hr/><br/>
+
+    .center[![:scale 100%](./fig/figAUC7.png)]
 
 
 
