few edits for my IRBV seminar

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
     # DO BIOTIC INTERACTIONS IMPACT GEOGRAPHIC RANGE LIMITS OF SPECIES?
 
     <br/><br/>
-    ## University of Toronto
+    ## IRBV, Montreal
 
-    ### January, 8<sup>th</sup> 2018
+    ### February, 2<sup>nd</sup> 2018
 
     <br>
 
@@ -335,7 +335,7 @@
 
     ???
     We scaled up in space
-    Let's sclaed up in tome
+    Let's sclaed up in time
     Lots of process to take into account !
     That explain why species are here... Lot's of processes le'ts recap
 
@@ -475,9 +475,9 @@
     --
     ## Theory
 
-    ### - Gravel *et al*, 2011, *Ecology Letters*
+    ### - Gravel *et al*, 2011, *Ecology Letters* [![:fontawe](external-link)](http://onlinelibrary.wiley.com/doi/10.1111/j.1461-0248.2011.01667.x/abstract)
 
-    ### - Massol *et al*, 2017, *Advances in Ecological Research*
+    ### - Massol *et al*, 2017, *Advances in Ecological Research* [![:fontawe](external-link)](https://www.researchgate.net/publication/311846095_Island_Biogeography_of_Food_Webs)
 
 
 
@@ -508,7 +508,7 @@
     <br/><br/>
 
     --
-    1. How to integrate biotic interactions into distribution models?
+    1. How to integrate biotic interactions into SDMs?
 
     --
     2. How the properties of ecological networks influence co-occurrence?
@@ -618,7 +618,7 @@
     <hr/><br/>
 
     --
-    ## Gravel *et al*, 2011, *Ecology Letters*
+    ## Gravel *et al*, 2011, *Ecology Letters* [![:fontawe](external-link)](http://onlinelibrary.wiley.com/doi/10.1111/j.1461-0248.2011.01667.x/abstract)
 
     --
     ### 1. Island without prey = no predator colonisation
@@ -735,8 +735,6 @@
 
 
     ---
-    <br/>
-    --
     # Conclusion and limits
     <hr/><br>
 
@@ -844,7 +842,7 @@
     # What did I do?
     <hr/><br/>
 
-    ### I looked at checkerboard distrbutions for nodes at different position in the network
+    ### Checkerboard distrbution in a network context
     <br>
 
     --
