--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     --
 
     <br>
-    ## Compuational ecologist
+    ## Computational ecologist
     --
 
     .right[<img src="img/logo/inSilecoLogo.png" height="200" align="right" style="padding:12px"/>]
@@ -540,7 +540,7 @@
     ---
     # THEORY OF ISLAND BIOGEOGRAPHY AND BIOTIC INTERACTIONS
     <hr />
-    ###  How to integrate biotic interactions into distribution models?
+    ###  How to integrate biotic interactions into SDMs?
 
 
     ---
