edits for Guelph Seminar

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
     # DO BIOTIC INTERACTIONS IMPACT GEOGRAPHIC RANGE LIMITS OF SPECIES?
 
     <br/><br/>
-    ## IRBV, Montreal
+    ## Integrative Biology, University of Guelph
 
-    ### February, 2<sup>nd</sup> 2018
+    ### March, 13<sup>th</sup> 2018
 
     <br>
 
@@ -202,8 +202,8 @@
 
 
     - .left[Domique Gravel]
-    - .left[Kevin S. McCann]
     - .left[Nicolas Mouquet]
+    - .left[Kevin S. McCann]
 
 
     ---
@@ -228,7 +228,7 @@
 
     ## Post-doc (2017)
 
-    ### Kevin S. McCann -- University of Guelph
+    ### Kevin S. McCann ![:fontawe](long-arrow-right) SSC-2471
 
     ---
     # ABOUT ME
@@ -249,6 +249,15 @@
     .right[<img src="img/logo/inSilecoLogo.png" height="200" align="right" style="padding:12px"/>]
 
     ### .left[[inSileco: codes, ideas and methods in ecology](https://insileco.github.io/)]
+
+
+    ---
+    # LATEST BLOGPOST
+
+    .center[![:scale 62%](img/edgebundling.png)]
+
+    [Hierarchical edge bundling](https://insileco.github.io/2018/02/21/hierarchical-edge-bundling-using-base-plot/)
+
 
 
     ---
@@ -1088,7 +1097,7 @@
     # What did I do?
     <hr/><br/>
 
-    ### 4 data sets -- interactions known
+    ### 4 data sets, **know interactions**
     --
 
     <br/>
