first set of edits for Sherby seminar

--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
         font-size: 1.6em;
       }
 
+      .style2 h4 {
+        padding-left: 0em;
+        font-size: 1.4em;
+      }
+
       .style2 a {
         color: #212121;
       }
@@ -183,27 +188,16 @@
     class: center, middle, style1
     ---
 
-    # DO BIOTIC INTERACTIONS IMPACT GEOGRAPHIC RANGE LIMITS OF SPECIES?
-
-    <br/><br/>
-    ## Integrative Biology, University of Guelph
-
-    ### March, 13<sup>th</sup> 2018
+    # THE TITLE IS OBVIOUSLY MISSING
 
     <br>
+    ### [Kevin Cazelles](http://kevincazelles.fr), [Universty of Guelph](https://www.uoguelph.ca/) &nbsp;&nbsp; [![:fontawe](github)](https://github.com/KevCaz/seminarInteractionsDistributions)
 
-    ### .left[[Kevin Cazelles](http://kevincazelles.fr)]
+    <br/>
+    ### Département de biologie, Université de Sherbrooke
 
-    ### .left[![:fontawe](github) &nbsp; .small[[KevCaz/seminarInteractionsDistributions](https://github.com/KevCaz/seminarInteractionsDistributions)]]
+    #### October, 12<sup>th</sup> 2018
 
-    .right[[inSileco](https://inSileco.github.io/)]
-    <img src="img/logo/inSilecoLogo.png" height="120" align="right" style="padding:8px"/>
-    <img src="img/logo/logoUniv.png" height="120" align="right" style="padding:12px"/>
-
-
-    - .left[Domique Gravel]
-    - .left[Nicolas Mouquet]
-    - .left[Kevin S. McCann]
 
 
     ---
@@ -211,40 +205,20 @@
     layout: true
     class: style1
     ---
-
     # ABOUT ME
     <hr>
 
-    <br>
+    ## Theory
 
-    ## PhD (2012-2016)
-
-    .center[![:scale 80%](img/logo/logos.png)]
-
-    ### Dominique Gravel / Nicolas Mouquet
+      - biogeography
+      - co-occurrence
+      - food webs
+      - population dynamics
+      - homogenezation
 
     --
-    <br>
 
-    ## Post-doc (2017)
-
-    ### Kevin S. McCann ![:fontawe](long-arrow-right) SSC-2471
-
-    ---
-    # ABOUT ME
-    <hr>
-
-    <br>
-    ## Theoretical ecologist
-    --
-
-    <br>
-    ## Data ecologist
-    --
-
-    <br>
-    ## Computational ecologist
-    --
+    ## Statistics, algorithm, data, software
 
     .right[<img src="img/logo/inSilecoLogo.png" height="200" align="right" style="padding:12px"/>]
 
@@ -252,11 +226,21 @@
 
 
     ---
-    # LATEST BLOGPOST
+    name: title
+    layout: true
+    class: center, middle, style1
+    ---
 
-    .center[![:scale 62%](img/edgebundling.png)]
+    # DO BIOTIC INTERACTIONS IMPACT GEOGRAPHIC RANGE LIMITS OF SPECIES?
 
-    [Hierarchical edge bundling](https://insileco.github.io/2018/02/21/hierarchical-edge-bundling-using-base-plot/)
+    <br>
+    ### [Kevin Cazelles](http://kevincazelles.fr), [Universty of Guelph](https://www.uoguelph.ca/) &nbsp;&nbsp; [![:fontawe](github)](https://github.com/KevCaz/seminarInteractionsDistributions)
+
+    <br/>
+    ### Département de biologie, Université de Sherbrooke
+
+    #### October, 12<sup>th</sup> 2018
+
 
 
 
@@ -378,7 +362,7 @@
 
     <br/>
 
-    # .center[INTERDEPENDENT]
+    # .center[[INTERDEPENDENT]()]
 
 
     ---
@@ -475,6 +459,8 @@
     ### - Clark *et al*, 2014, *Ecological Applications*
 
     ### - Pollock *et al*, 2014, *Methods in Ecology and Evolution*
+
+    ### -  Zurell *et al*, 2018, *Ecography*
 
 
     ---
@@ -1624,15 +1610,42 @@
 
 
 
+    ---
+    name: style2
+    layout: true
+    class: class: center, middle, style2
+    ---
+
+    ## What am I doing these days?
+    <hr />
+    ### Science, what else?
 
 
 
+    ---
+    name: style1
+    layout: true
+    ---
+
+    # Homogenization
+    <hr><br>
+
+    ![](img/homogen.png)
 
 
+    ---
+
+    # Rewiring and seasonality in food webs
+    <hr><br><br>
+
+    ### [Nature rewires in a changing world](https://peerj.com/preprints/27187/) *Nature Eco Evo*
 
 
+    ---
+    # Iscoscape: the push for provenance
+    <hr><br><br>
 
-
+    ### [Fighting noise with dimensionality](https://kevcaz.github.io/fightingNoise/#1)
 
 
 
@@ -1961,6 +1974,27 @@
     --
 
     ## All solutions increase the complexity.
+
+
+    # ABOUT ME
+    <hr>
+
+    <br>
+
+    ## PhD (2012-2016)
+
+    .center[![:scale 80%](img/logo/logos.png)]
+
+    ### Dominique Gravel / Nicolas Mouquet
+
+    --
+    <br>
+
+    ## Post-doc (2017)
+
+    ### Kevin S. McCann
+
+
 
 
 
