--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
     h2 {
         padding-left: .8em;
       }
-      h3 {
-        padding-left: 1.6em;
-      }
+    h3 {
+      padding-left: 1.4em;
+    }
 
-
-      h1, h2, h3 {
-        font-weight: medium;
-      }
+    h1, h2, h3 {
+      font-weight: medium;
+    }
 
 
       .remark-slide-content {
@@ -68,7 +67,7 @@
         font-size: 2.2em;
       }
       .remark-slide-content h2 { font-size: 1.5em; }
-      .remark-slide-content h3 { font-size: 1.3em; }
+      .remark-slide-content h3 { font-size: 1.2em; }
       .remark-slide-content blockquote {
         font-size: 1.2em;
         padding-left: 1em;
@@ -218,7 +217,7 @@
 
     --
 
-    ## Statistics, algorithm, data, software
+    ## Statistics, algorithms, data, software
 
     .right[<img src="img/logo/inSilecoLogo.png" height="200" align="right" style="padding:12px"/>]
 
@@ -449,18 +448,18 @@
     ## Species are assumed independent
     --
 
-    ### - Davis *et al*, 1998, *Nature*
+    ### ![:fontawe](file-text) Davis *et al*, 1998, *Nature*
     --
 
     <br/>
 
     ## Joint Species Distribution Models (JSDMs)
 
-    ### - Clark *et al*, 2014, *Ecological Applications*
+    ### ![:fontawe](file-text) Clark *et al*, 2014, *Ecological Applications*
 
-    ### - Pollock *et al*, 2014, *Methods in Ecology and Evolution*
+    ### ![:fontawe](file-text) Pollock *et al*, 2014, *Methods in Ecology and Evolution*
 
-    ### -  Zurell *et al*, 2018, *Ecography*
+    ### ![:fontawe](file-text) Zurell *et al*, 2018, *Ecography*
 
 
     ---
@@ -470,9 +469,12 @@
     --
     ## Theory
 
-    ### - Gravel *et al*, 2011, *Ecology Letters* [![:fontawe](external-link)](http://onlinelibrary.wiley.com/doi/10.1111/j.1461-0248.2011.01667.x/abstract)
+    ### ![:fontawe](file-text) Holt, *Toward a Trophic Island Biogeography*, 2009. [![:fontawe](external-link)](https://press.princeton.edu/titles/9096.html)
 
-    ### - Massol *et al*, 2017, *Advances in Ecological Research* [![:fontawe](external-link)](https://www.researchgate.net/publication/311846095_Island_Biogeography_of_Food_Webs)
+    ### ![:fontawe](file-text) Gravel *et al.*, *Ecology Letters*, 2011.[![:fontawe](external-link)]((http://onlinelibrary.wiley.com/doi/10.1111/j.1461-0248.2011.01667.x/abstract)
+
+    ###  ![:fontawe](file-text) Massol *et al.*, *Advances in Ecological Research*, 2017.[![:fontawe](external-link)]((https://doi.org/10.1016/bs.aecr.2016.10.004)
+
 
 
 
@@ -743,7 +745,7 @@
     <br/>
 
     --
-    ### What is wrong with co-occurrence data for species embedded in a network?
+    ### [What is wrong with co-occurrence data for species embedded in a network?]()
 
 
 
@@ -1007,14 +1009,6 @@
     ## Degree <i class="fa fa-long-arrow-up" aria-hidden="true"></i> &nbsp;&nbsp; `\( \Longrightarrow \)` &nbsp;&nbsp; detection <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
 
 
-    --
-
-    <br/>
-
-    ## Abiotic variables?
-
-    --
-    ## Empirical data?
 
 
     --
@@ -1022,12 +1016,44 @@
     ### .right[[Cazelles *et al.*, *Theoretical Ecology* (2016).](http://doi.org/10.1007/s12080-015-0281-9)]
 
 
+    ---
+    # Correlations?
+    <br>
+
+    .center[![:scale 100%](./fig/figNew/argument_pred1.png)]
+
+    ---
+    # Correlations?
+    <br>
+
+    .center[![:scale 100%](./fig/figNew/argument_pred2.png)]
+    ---
+    # Correlations?
+    <br>
+
+    .center[![:scale 100%](./fig/figNew/argument_pred3.png)]
+    ---
+    # Correlations?
+    <br>
+
+    .center[![:scale 100%](./fig/figNew/argument_pred4.png)]
 
 
+    ---
+    # Conclusion and limits
+    <hr/><br/>
 
+    ## Shortest path <i class="fa fa-long-arrow-up" aria-hidden="true"></i> &nbsp;&nbsp; `\( \Longrightarrow \)` &nbsp;&nbsp; detection <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
 
+    ## Degree <i class="fa fa-long-arrow-up" aria-hidden="true"></i> &nbsp;&nbsp; `\( \Longrightarrow \)` &nbsp;&nbsp; detection <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
 
+    --
+    <br/>
 
+    ## Abiotic variables?
+
+    --
+    ## Empirical data?
 
 
 
@@ -1387,226 +1413,33 @@
     .center[![:scale 100%](./fig/figLast5.png)]
 
 
+
     ---
     # Towards mechanistic NDMs?
     <hr/><br/>
 
-    # A first step:
+    ### 1. **Building a biogeography of ecological networks**
 
-    ## **[BUILDING AN ENERGETIC FRAMEWORK](https://kevcaz.github.io/talkBES2017/#1)**
-
-
-    ---
-    # A truism?
-    <hr/><br>
-
-    ### 1- Solar radiation ![:fontawe](long-arrow-right) Autotrophs ![:fontawe](long-arrow-right) Hetreotrophs
     <br>
 
-    --
-    ### 2- Carbon source
-    <br>
-
-    --
-    ### 3- Water availibility
-    <br>
-
-    --
-    ### 4- Nutrients availibility
-
-    ---
-    # A truism?
-    <hr/>
-
-    .center[![:scale 100%](fig/biogeo/ecoreg.png)]
-
-    ---
-    # Model principle
-    <hr/><br>
-
-    .center[![:scale 100%](fig/gtib/figGTIB9.png)]
-
-    ---
-    # Model principle
-    <hr/><br>
-
-    --
-    ## 1- Cost of a community
+    ![:fontawe](file-text) [Galiana, N., *et al.* (2018). The spatial scaling of species interaction networks. *Nature Ecology & Evolution*.](https://www.nature.com/articles/s41559-018-0517-3)
 
     <br>
 
     --
-    ## 2- Extinctions
 
-      ### - Random
-
-      ###-  Energy based
-
-
-    ---
-    # Energy cost of a network on an island
-    <hr/><br>
-
-    .center[![:scale 35%](fig/netenerg1.png)]
-
-    ### Niche model + body size to derive maintenance metabolism
-
-    ---
-    # Energy cost of a network on an island
-    <hr/><br>
-
-    .center[![:scale 45%](fig/netenerg2.png)]
-
-
-    ---
-    # Energy cost of a network on an island
-    <hr/><br>
-
-    .center[![:scale 45%](fig/netenerg3.png)]
-
-    ---
-    # Energy cost of a network on an island
-    <hr/><br>
-
-    .center[![:scale 45%](fig/netenerg4.png)]
-
-    ---
-    # Energy cost of a network on an island
-    <hr/><br>
-
-    .center[![:scale 45%](fig/netenerg5.png)]
-
-    ---
-    # Energy cost of a network on an island
-    <hr/><br>
-
-    .center[![:scale 45%](fig/netenerg6.png)]
+    ### 2. **[Building an energetic framework](https://kevcaz.github.io/talkBES2017/#1)**
 
 
 
     ---
-    # Cost of a community on an island
-    <hr/>
-
-    .center[![:scale 75%](fig/motifcost1.png)]
-
+    name: style2
+    layout: true
+    class: center, middle, style2
     ---
-    # Cost of a community on an island
-    <hr/>
-
-    .center[![:scale 75%](fig/motifcost2.png)]
-
-    ---
-    # Cost of a community on an island
-    <hr/>
-
-    .center[![:scale 75%](fig/motifcost3.png)]
-
-
-    ---
-    # Model
-    <hr/><br>
-
-    .center[![:scale 100%](fig/gtib/figGTIB9.png)]
-
-
-
-    ---
-    # SARs become SERs &nbsp;&nbsp; .small[[Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)]
-    <hr/>
-
-    .center[![:scale 100%](fig/figRes11.png)]
-
-    ---
-    # SARs become SERs &nbsp;&nbsp;
-    <hr/>
-
-    .center[![:scale 100%](fig/figRes12.png)]
-
-
-    ---
-    # SARs become SERs &nbsp;&nbsp;
-    <hr/>
-
-    .center[![:scale 100%](fig/figRes13.png)]
-
-
-    ---
-    # SARs become SERs &nbsp;&nbsp;
-    <hr/>
-
-    .center[![:scale 100%](fig/figRes14.png)]
-
-    ---
-    # SARs become SERs &nbsp;&nbsp;
-    <hr/>
-
-    .center[![:scale 100%](fig/figRes15.png)]
-
-
-
-    ---
-    # Mean degree
-    <hr/>
-
-    .center[![:scale 100%](fig/figRes21.png)]
-
-    ---
-    # Mean degree
-    <hr/>
-
-    .center[![:scale 100%](fig/figRes22.png)]
-
-    ---
-    # Mean degree
-    <hr/>
-
-    .center[![:scale 100%](fig/figRes23.png)]
-
-    ---
-    # Mean degree
-    <hr/>
-
-    .center[![:scale 100%](fig/figRes24.png)]
-
-    ---
-    # Mean degree &nbsp;&nbsp; .small[[Piechnik *et al.*, *Oikos*, 2008.](https://www.jstor.org/stable/3544109)]
-    <hr/>
-
-    .center[![:scale 100%](fig/figRes25.png)]
-
-
-    <!-- contrast random and non randon scenarios -->
-
-    ---
-    # An Energetic Theory of Isand Biogeography
-    <hr/><br>
-
-    --
-    ## - TTIB / MTE (or DEB)
-    <br>
-
-    --
-    ## - Better quantification
-    <br>
-
-    --
-    ## - Theoretical fundations of NDMs
-
-
-    ---
-    # New insights
-    <hr/><br>
-
-    .center[![:scale 85%](fig/Hatton.png)]
-
-    ---
-    # New insights
-    <hr/>
-
-    .center[![:scale 95%](fig/figdem7.png)]
-
-
+    # THANK YOU
+    <hr />
+    ### Merci
 
 
 
@@ -1635,7 +1468,7 @@
 
     ---
 
-    # Rewiring and seasonality in food webs
+    # Rewiring + seasonality in food webs
     <hr><br><br>
 
     ### [Nature rewires in a changing world](https://peerj.com/preprints/27187/) *Nature Eco Evo*
@@ -1993,6 +1826,218 @@
     ## Post-doc (2017)
 
     ### Kevin S. McCann
+
+
+
+        ---
+        # A truism?
+        <hr/><br>
+
+        ### 1- Solar radiation ![:fontawe](long-arrow-right) Autotrophs ![:fontawe](long-arrow-right) Hetreotrophs
+        <br>
+
+        --
+        ### 2- Carbon source
+        <br>
+
+        --
+        ### 3- Water availibility
+        <br>
+
+        --
+        ### 4- Nutrients availibility
+
+        ---
+        # A truism?
+        <hr/>
+
+        .center[![:scale 100%](fig/biogeo/ecoreg.png)]
+
+        ---
+        # Model principle
+        <hr/><br>
+
+        .center[![:scale 100%](fig/gtib/figGTIB9.png)]
+
+        ---
+        # Model principle
+        <hr/><br>
+
+        --
+        ## 1- Cost of a community
+
+        <br>
+
+        --
+        ## 2- Extinctions
+
+          ### - Random
+
+          ###-  Energy based
+
+
+        ---
+        # Energy cost of a network on an island
+        <hr/><br>
+
+        .center[![:scale 35%](fig/netenerg1.png)]
+
+        ### Niche model + body size to derive maintenance metabolism
+
+        ---
+        # Energy cost of a network on an island
+        <hr/><br>
+
+        .center[![:scale 45%](fig/netenerg2.png)]
+
+
+        ---
+        # Energy cost of a network on an island
+        <hr/><br>
+
+        .center[![:scale 45%](fig/netenerg3.png)]
+
+        ---
+        # Energy cost of a network on an island
+        <hr/><br>
+
+        .center[![:scale 45%](fig/netenerg4.png)]
+
+        ---
+        # Energy cost of a network on an island
+        <hr/><br>
+
+        .center[![:scale 45%](fig/netenerg5.png)]
+
+        ---
+        # Energy cost of a network on an island
+        <hr/><br>
+
+        .center[![:scale 45%](fig/netenerg6.png)]
+
+
+
+        ---
+        # Cost of a community on an island
+        <hr/>
+
+        .center[![:scale 75%](fig/motifcost1.png)]
+
+        ---
+        # Cost of a community on an island
+        <hr/>
+
+        .center[![:scale 75%](fig/motifcost2.png)]
+
+        ---
+        # Cost of a community on an island
+        <hr/>
+
+        .center[![:scale 75%](fig/motifcost3.png)]
+
+
+        ---
+        # Model
+        <hr/><br>
+
+        .center[![:scale 100%](fig/gtib/figGTIB9.png)]
+
+
+
+        ---
+        # SARs become SERs &nbsp;&nbsp; .small[[Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)]
+        <hr/>
+
+        .center[![:scale 100%](fig/figRes11.png)]
+
+        ---
+        # SARs become SERs &nbsp;&nbsp;
+        <hr/>
+
+        .center[![:scale 100%](fig/figRes12.png)]
+
+
+        ---
+        # SARs become SERs &nbsp;&nbsp;
+        <hr/>
+
+        .center[![:scale 100%](fig/figRes13.png)]
+
+
+        ---
+        # SARs become SERs &nbsp;&nbsp;
+        <hr/>
+
+        .center[![:scale 100%](fig/figRes14.png)]
+
+        ---
+        # SARs become SERs &nbsp;&nbsp;
+        <hr/>
+
+        .center[![:scale 100%](fig/figRes15.png)]
+
+
+
+        ---
+        # Mean degree
+        <hr/>
+
+        .center[![:scale 100%](fig/figRes21.png)]
+
+        ---
+        # Mean degree
+        <hr/>
+
+        .center[![:scale 100%](fig/figRes22.png)]
+
+        ---
+        # Mean degree
+        <hr/>
+
+        .center[![:scale 100%](fig/figRes23.png)]
+
+        ---
+        # Mean degree
+        <hr/>
+
+        .center[![:scale 100%](fig/figRes24.png)]
+
+        ---
+        # Mean degree &nbsp;&nbsp; .small[[Piechnik *et al.*, *Oikos*, 2008.](https://www.jstor.org/stable/3544109)]
+        <hr/>
+
+        .center[![:scale 100%](fig/figRes25.png)]
+
+
+        <!-- contrast random and non randon scenarios -->
+
+        ---
+        # An Energetic Theory of Isand Biogeography
+        <hr/><br>
+
+        --
+        ## - TTIB / MTE (or DEB)
+        <br>
+
+        --
+        ## - Better quantification
+        <br>
+
+        --
+        ## - Theoretical fundations of NDMs
+
+
+        ---
+        # New insights
+        <hr/><br>
+
+        .center[![:scale 85%](fig/Hatton.png)]
+
+        ---
+        # New insights
+        <hr/>
+
+        .center[![:scale 95%](fig/figdem7.png)]
 
 
 
